Fixed height and z-index to make sure nav will stay on the top

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 .sticky-nav {
   position: sticky;
   top: 0;
+  z-index: 9999;
 }
